1.9.24
------
(RB=202295)
Refactor IDL and Snapshot compatibility checks. Move file number checks to their
own tasks. Add in a flag -Prest.idl.skipCheck to allow all IDL checks to be
skipped. (IDL file count check is still run with -Prest.idl.compatibility=OFF)

1.9.23
------
(RB=206396)
To detect, as early as possible, a mistake that is otherwise difficult to debug, add 
check during data template generation that verifies filename and path match schema 
name and namespace.

(RB=207258)
Add configuration to allow the rest.li server to limit exception details in responses and to customize the default response for internal server error responses.

1.9.22
------
(RB=206507)
Allow routing to batch partial update with no "X-RestLi-Method" HTTP header.

(RB=206724)
Support more HTTP header manipulation methods in restli-client request builder.

1.9.21
------
(RB=204527)
Add spring and guice support, enables running rest.li servlets with dependency injection, also add a logging filter.

(RB=205233)
Fix bug in D2Config that service variant doesn't point to master colo when defaultRoutingToMaster is set.

(RB=204500)
Fix bug that R2 Client may lose connection forever after the server being bounced when there is a very high downstream
qps and D2 is not used.

1.9.20
------
(RB=205315)
Removed the notion of client only supplied config keys. Fixed bug in reading set from transport client properties.

1.9.19
------
(RB=204042)
Fix bug when GenericArrayType is used in action return type.

1.9.18
------
(RB=203386)
Fixed bug in client only config key-values.

(RB=203610)
Add support for returning error details in batch create responses.

(RB=202724)
Implement context path for Jetty server.

1.9.17
------
(RB=202641)
fix isRegistered in JmxManager

(RB=198503)
Added ability for clients to provide service level configs. Added support for clients to enable response compression.

(RB=202201)