@@ -1,0 +1,25 @@
+{
+  "name" : "manualProjections",
+  "namespace" : "com.linkedin.restli.examples.greetings.client",
+  "path" : "/manualProjections",
+  "schema" : "com.linkedin.restli.examples.greetings.api.Greeting",
+  "doc" : "Resource where all get operations are implemented to explicitly examine the projection\n sent by the client and then manually apply the projection.\n\ngenerated from: com.linkedin.restli.examples.greetings.server.ManualProjectionsResource",
+  "collection" : {
+    "identifier" : {
+      "name" : "manualProjectionsId",
+      "type" : "long"
+    },
+    "supports" : [ "get" ],
+    "methods" : [ {
+      "method" : "get",
+      "parameters" : [ {
+        "name" : "ignoreProjection",
+        "type" : "boolean",
+        "default" : "false"
+      } ]
+    } ],
+    "entity" : {
+      "path" : "/manualProjections/{manualProjectionsId}"
+    }
+  }
+}
